--- a/azercell.html
+++ b/azercell.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
     <title>Mobile Operators | Azercell</title>
@@ -16,9 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <a href="/">
-                        <img src="/img/logo.png" alt="" />
-                    </a>
+                    <img src="img/logo.png" alt="voopo" />
                 </div>
                 <div class="col-md-9 menu">
                     <ul>
@@ -35,10 +32,11 @@
     <section id="azercell">
         <div class="azercell-bg"></div>
         <div class="bg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+            <p>
+                Azercell Telecom started its activities on 15 December 1996 offering subscribers mobile telecommunications services based on postpaid system. The prepaid system was launched with tariff package — SimSim, in 1998. On 5th March, 2018, Azerbaijan International
+                Telecom and the company Fintur Holdings B.V. signed an agreement to sell 51.3 percent of the shares of Azertel Telekomunikasyon Yatırım Dış Ticaret A.Ş. Azertel is the sole founder of Azercell. Azercell has invested more than 1 billion
+                USD in projects aimed improving the social welfare of the country.
+
             </p>
         </div>
     </section>
@@ -46,41 +44,107 @@
     <!-- <section id="product-visual-info"></section> -->
 
     <section id="packages">
-        <h3>The best-selling Azercell Packages</h3><br>
+        <h2>Tarrifs which are provided by Azercell</h2>
         <h4>Pick a Pricing Plan</h4>
         <div class="packages-container">
             <div class="package">
                 <h3>
-                    Basic
+                    GencOl
                 </h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h4>6 , 9 manats / month</h4>
+                <p>300 / 600 Minute Calls</p>
+                <p>3 GB / 6 GB Internet</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>3 GB/ 6 GB Internet for Azercell apps</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Standered</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>Bolge</h3>
+                <h4>30 qepiks per day</h4>
+                <p>Free calls after third Minute</p>
+                <p>Local calls in regions - 0.05 AZN</p>
+                <p>1 SMS - 0.05 AZN</p>
+                <p>1 MB - 0.40 AZN</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Enterprise</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>Data tariff</h3>
+                <h4>3, 5, 10 AZN /month</h4>
+                <p>500 MB Internet - 3 AZN</p>
+                <p>1 Gb Internet - 5 AZN</p>
+                <p>5 GB Internet - 10 AZN</p>
+                <p>1 MB- 0.04 AZB without package</p>
+
                 <button class='btn-gradient'>Order now</button>
             </div>
+
+        </div>
+    </section>
+
+    <section id="packages">
+        <h2>Internet packets</h2>
+
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>1 AZN per month</h3>
+                <p>60 MB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>3 AZN per month</h3>
+                <p>500 MB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>5 AZN per month</h3>
+                <p>1 GB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
+        </div>
+    </section>
+    <section id="packages">
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>10 AZN per month</h3>
+                <p>15 GB Internet</p>
+                <p>Period of Usage -1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>25 AZN per month</h3>
+                <p>30 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>30 AZN per month</h3>
+                <p>50 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
         </div>
     </section>
 
@@ -88,25 +152,23 @@
     <footer>
         <div>
             <div class="footer-logo">
-                <img src="img/logo.png" height="73" alt="">
+                <img src="img/logo.png" width="190" height="73" alt="">
                 <p>
-                    There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
-                </p>
+                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
             </div>
             <div class="help-line">
-                <h3>Help Line</h3>
+                <h3>Mobile Services</h3>
                 <ul>
-                    <li><a href="">Cloud Phone Service</a></li>
-                    <li><a href="">Media Relation</a></li>
-                    <li><a href="">Business Program</a></li>
-                    <li><a href="">Home Service</a></li>
-                    <li><a href="">Service Guide</a></li>
+                    <li><a href="azercell.html">Azercell</a></li>
+                    <li><a href="bakcell.html">Bakcell</a></li>
+                    <li><a href="nar.html">Nar Mobile</a></li>
                 </ul>
             </div>
             <div class="menu-line">
                 <h3>Menu Line</h3>
                 <ul>
-                    <li><a href="">Home</a></a></li>
+                    <li><a href="">Home</a></a>
+                    </li>
                     <li><a href="#service-info">Service</a></li>
                     <li><a href="#desc">About</a></li>
                     <li><a href="">Contact</a></li>
