--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <a href="/"><img src="/img/logo.png" alt=""></a>
+                    <a href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="col-md-9 menu">
                     <ul>
@@ -35,12 +35,12 @@
                 <div class="col-md-7 text">
                     <h1>Mobile operators In the terrirtory of Azerbaijan</h1>
                     <p>
-                          
+
                     </p>
                     <a href="#desc"><button class="btn-gradient">Learn more</button></a>
                 </div>
                 <div class="col-md-5 photo">
-                    <img src="/img/technology-connection.png" alt="" />
+                    <img src="img/technology-connection.png" alt="" />
                 </div>
             </div>
         </div>
@@ -54,7 +54,8 @@
                         <img src="img/azercell.jpeg" alt="">
                         <h3>Azercell</h3>
                         <p>
-                          Azercell is a mobile telecommunications company, located in Baku, Azerbaijan. The leading mobile operator of the country “Azercell Telecom” LLC with more than 5 million customers controls the largest market share of the local market. The 100% shareholder of Azercell is the Turkish company " Azertel Telekomünikasyon ve Yatırım Dış Ticaret A.Ş," </p>
+                            Azercell is a mobile telecommunications company, located in Baku, Azerbaijan. The leading mobile operator of the country “Azercell Telecom” LLC with more than 5 million customers controls the largest market share of the local market. The 100% shareholder
+                            of Azercell is the Turkish company " Azertel Telekomünikasyon ve Yatırım Dış Ticaret A.Ş," </p>
                     </a>
                 </div>
                 <div class="col-md-3">
@@ -62,7 +63,9 @@
                         <img src="img/bakcell.jpg" alt="">
                         <h3>Bakcell</h3>
                         <p>
-                          Bakcell is the first company to provide mobile communications services in Azerbaijan. Its network covers 93% of the country’s territory (excluding occupied territories) and 99% of the population thanks to well-over 8000 base stations.Bakcell provides a wide range of high-quality modern telecommunication services to more than 3 million customers.</p>
+                            Bakcell is the first company to provide mobile communications services in Azerbaijan. Its network covers 93% of the country’s territory (excluding occupied territories) and 99% of the population thanks to well-over 8000 base stations.Bakcell provides
+                            a wide range of high-quality modern telecommunication services to more than 3 million customers.
+                        </p>
                     </a>
                 </div>
                 <div class="col-md-3">
@@ -70,7 +73,8 @@
                         <img src="img/nar.png" alt="" id="nar">
                         <h3>Nar</h3>
                         <p>
-                          Nar is a brand for commercial activities of Azerfon, a mobile telecommunications company, located in Baku, Azerbaijan. Azerfon LLC launched its commercial activities on 21 March 2007 under brand name Nar Mobile. Today the network coverage of Azerfon claims to reach the territory of the Azerbaijan Republic
+                            Nar is a brand for commercial activities of Azerfon, a mobile telecommunications company, located in Baku, Azerbaijan. Azerfon LLC launched its commercial activities on 21 March 2007 under brand name Nar Mobile. Today the network coverage of Azerfon claims
+                            to reach the territory of the Azerbaijan Republic
                         </p>
                     </a>
                 </div>
@@ -88,142 +92,136 @@
                     <h2>Telephone system and mobile operators in Azerbaijan</h2>
                     <hr />
                     <p class="change-p-color">
-                      There are three major mobile phone operators currently in Azerbaijan: Azercell, Bakcell and Nar (Brand of Azerfon). Azercell, Bakcell and Nar (Brand of Azerfon) offer 2G, 3G and 4G services. All three networks are widely modern and reliable with shops located in major towns and cities where one can purchase a sim card or get assistance if needed                    </p>
+                        There are three major mobile phone operators currently in Azerbaijan: Azercell, Bakcell and Nar (Brand of Azerfon). Azercell, Bakcell and Nar (Brand of Azerfon) offer 2G, 3G and 4G services. All three networks are widely modern and reliable with shops
+                        located in major towns and cities where one can purchase a sim card or get assistance if needed </p>
                     <p>
-                      Azercell, Bakcell and Azerfon are often recommended to tourists due to the variety of tariffs available and the help available in a variety of languages. Other mobile phone operators include Aztelekom, AzEuroTel, Caspian Telecom and Catel Eurasiacom.</p>
+                        Azercell, Bakcell and Azerfon are often recommended to tourists due to the variety of tariffs available and the help available in a variety of languages. Other mobile phone operators include Aztelekom, AzEuroTel, Caspian Telecom and Catel Eurasiacom.</p>
                     <p>
-                      As of June 2014, approximately 95% of all main lines are digitized and provide excellent quality services for the region. The remaining 5% is in modernization process.</p>
+                        As of June 2014, approximately 95% of all main lines are digitized and provide excellent quality services for the region. The remaining 5% is in modernization process.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="service-info">
+
         <div class="service-info-desc">
+            <img src="img/logo.png" alt="" width="260">
             <h2>Best Service</h2>
             <h2>we provide</h2>
-            <p>Nulla consectetur condimentum tellus ut scelerisque.</p>
-            <button class="btn-gradient">Learn more</button>
+            <p>We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for yo</p>
+            <a href="#desc"><button class="btn-gradient">Learn more</button></a>
         </div>
         <div class="service-info-items">
             <div class="service-info-item">
                 <div class="service-info-items-icon">
-                    <i class="fa fa-cloud"></i>
+                    <img src="img/bakcell.jpg" alt="">
                 </div>
                 <div class="service-info-items-text">
-                    <h4>Cloud Base Solutions</h4>
+                    <h4>Bakcell</h4>
                     <p>
-                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
+                        Fastest speed of Bakcell’s mobile internet is being regularly recognized on the local and international level. In 2018 Bakcell was named “Azerbaijan’s Fastest Mobile Network” by “Ookla” company. It was confirmed that Bakcell has the best average download
+                        speed in the country. </p>
+                </div>
+            </div>
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <img src="img/azercell.jpeg" alt="" width="90">
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Azercell</h4>
+                    <p>
+                        Rapidly increasing 4G network of Azercell covers nearly 60 regions of the country, including Baku and Absheron peninsula. According to the results of mobile network quality and wireless coverage mapping surveys by international systems
                     </p>
                 </div>
             </div>
             <div class="service-info-item">
                 <div class="service-info-items-icon">
-                    <i class="fa fa-cloud"></i>
+                    <img src="img/nar.png" alt="">
                 </div>
                 <div class="service-info-items-text">
-                    <h4>Cloud Base Solutions</h4>
+                    <h4>Nar mobile</h4>
                     <p>
-                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
-                    </p>
+                        Nar in Azerbaijani means pomegranate and that fruit is commonly used in the company's advertising which, it has been claimed, is a 'symbol of the relationship between Azerbaijan’s rich cultural heritage and modern life'. </p>
                 </div>
             </div>
-            <div class="service-info-item">
-                <div class="service-info-items-icon">
-                    <i class="fa fa-cloud"></i>
-                </div>
-                <div class="service-info-items-text">
-                    <h4>Cloud Base Solutions</h4>
-                    <p>
-                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
-                    </p>
-                </div>
-            </div>
-            <div class="service-info-item">
-                <div class="service-info-items-icon">
-                    <i class="fa fa-cloud"></i>
-                </div>
-                <div class="service-info-items-text">
-                    <h4>Cloud Base Solutions</h4>
-                    <p>
-                        Nullam maximus porta odio a venenatis. Ut finibus quis orci in volutpat. Ut aliquam odio placerat nisl bibendum, vel suscipit leo elementum.
-                    </p>
-                </div>
-            </div>
+
         </div>
     </section>
 
     <!-- <section id="product-visual-info"></section> -->
 
-    <section id="packages" >
-        <h3>Package</h3>
+    <section id="packages">
+        <h3>Most profiteable tarrifs</h3>
         <h4>Pick a Pricing Plan</h4>
-        <div class="packages-container" >
+        <div class="packages-container">
             <div class="package">
                 <h3>
-                    Basic
+                    Azercell
                 </h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>
+                    GencOl
+                </h3>
+                <h4> 9 manats /month</h4>
+                <p>600 Minute Calls</p>
+                <p>3 GB Internet </p>
+                <p>Limitless whatsapp texting</p>
+                <p>For ordering G9=7575</p>
                 <button class=' btn-gradient '>Order now</button>
-          </div>
-          <div class="package">
-            <h3>Standered</h3>
-            <h4>$ 29.11 /month</h4>
-            <p>700 Minute Calls</p>
-            <p>2 IP Dedicated</p>
-            <p>10 Phone Number</p>
-            <p>Personal Server</p>
-            <p>15 Countries</p>
-            <button class=' btn-gradient '>Order now</button>
-          </div>
-          <div class="package">
-            <h3>Enterprise</h3>
-            <h4>$ 29.11 /month</h4>
-            <p>700 Minute Calls</p>
-            <p>2 IP Dedicated</p>
-            <p>10 Phone Number</p>
-            <p>Personal Server</p>
-            <p>15 Countries</p>
-            <button class=' btn-gradient '>Order now</button>
-          </div>
+            </div>
+            <div class="package">
+                <h3>Bakcell</h3>
+                <h3>DaimOnline</h3>
+                <h4> 10 manats /month</h4>
+                <p>100 Minute Calls</p>
+                <p>5 GB Internet</p>
+                <p>Free Whatsap</p>
+                <p>Free Facebook</p>
+                <button class=' btn-gradient '>Order now</button>
+            </div>
+            <div class="package">
+                <h3>Nar</h3>
+                <h3>Cavan Nar</h3>
+
+                <h4>9 manats /month</h4>
+                <p>500 Minute Calls</p>
+                <p>5 GB Intenrt</p>
+                <p>5 GB Social Media</p>
+                <p>Send C9 to 777</p>
+                <button class=' btn-gradient '>Order now</button>
+            </div>
         </div>
     </section>
 
     <!-- <section id="operators"></section> -->
     <footer>
-      <div>
-        <div class="footer-logo">
-          <img src="img/logo.png"  height="73" alt="">
-          <p>
-            There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
+        <div>
+            <div class="footer-logo">
+                <img src="img/logo.png" height="73" alt="">
+                <p>
+                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you
+                </p>
+            </div>
+            <div class="help-line">
+                <h3>Mobile Services</h3>
+                <ul>
+                    <li><a href="azercell.html">Azercell</a></li>
+                    <li><a href="bakcell.html">Bakcell</a></li>
+                    <li><a href="nar.html">Nar Mobile</a></li>
+                </ul>
+            </div>
+            <div class="menu-line">
+                <h3>Menu Line</h3>
+                <ul>
+                    <li><a href="">Home</a></a>
+                    </li>
+                    <li><a href="#service-info">Service</a></li>
+                    <li><a href="#desc">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="help-line">
-          <h3>Help Line</h3>
-          <ul>
-            <li><a href="">Cloud Phone Service</a></li>
-            <li><a href="">Media Relation</a></li>
-            <li><a href="">Business Program</a></li>
-            <li><a href="">Home Service</a></li>
-            <li><a href="">Service Guide</a></li>
-          </ul>
-        </div>
-        <div class="menu-line">
-          <h3>Menu Line</h3>
-          <ul>
-            <li><a href="">Home</a></a>
-            </li>
-            <li><a href="#service-info">Service</a></li>
-            <li><a href="#desc">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
     </footer>
-  </body>
+</body>
 
 </html>
