--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 logo">
-          <a href="/">
-          <img src="/img/logo.png" alt="" />
+          <a href="">
+          <img src="img/logo.png" alt="" />
           </a>
         </div>
         <div class="col-md-9 menu">
@@ -110,16 +110,14 @@
         <p>
           There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
       </div>
-      <div class="help-line">
-        <h3>Help Line</h3>
-        <ul>
-          <li><a href="">Cloud Phone Service</a></li>
-          <li><a href="">Media Relation</a></li>
-          <li><a href="">Business Program</a></li>
-          <li><a href="">Home Service</a></li>
-          <li><a href="">Service Guide</a></li>
-        </ul>
-      </div>
+     <div class="help-line">
+                <h3>Mobile Services</h3>
+                <ul>
+                    <li><a href="azercell.html">Azercell</a></li>
+                    <li><a href="bakcell.html">Bakcell</a></li>
+                    <li><a href="nar.html">Nar Mobile</a></li>
+                </ul>
+            </div>
       <div class="menu-line">
         <h3>Menu Line</h3>
         <ul>
