--- a/nar.html
+++ b/nar.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-3 logo">
                     <a href="/">
-                        <img src="/img/logo.png" alt="voopo" />
+                        <img src="img/logo.png" alt="voopo" />
                     </a>
                 </div>
                 <div class="col-md-9 menu">
@@ -25,7 +25,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#service-info">Service</a></li>
                         <li><a href="index.html#desc">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,14 +93,12 @@
                     There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
                 </p>
             </div>
-            <div class="help-line">
-                <h3>Help Line</h3>
+         <div class="help-line">
+                <h3>Mobile Services</h3>
                 <ul>
-                    <li><a href="">Cloud Phone Service</a></li>
-                    <li><a href="">Media Relation</a></li>
-                    <li><a href="">Business Program</a></li>
-                    <li><a href="">Home Service</a></li>
-                    <li><a href="">Service Guide</a></li>
+                    <li><a href="azercell.html">Azercell</a></li>
+                    <li><a href="bakcell.html">Bakcell</a></li>
+                    <li><a href="nar.html">Nar Mobile</a></li>
                 </ul>
             </div>
             <div class="menu-line">
